cmake_minimum_required(VERSION 3.27)
project(untitled9)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled9 main.cpp
        Board.cpp
        Board.h
        Bug.cpp
        Bug.h
        Crawler.cpp
        Crawler.h
        Hopper.cpp
        Hopper.h
        Spider.cpp
        Spider.h
        Spider.h
)
